# rust_from_scrach

./: README.md
hello_world/: Cargo.toml
hello_world/src/: main.rs
quant_factor/: .gitignore  Cargo.toml  README.md  USAGE.md
quant_factor/src/: factor.rs  lib.rs  main.rs  wide_table.rs
