[package]
name = "quant_factor"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.40", features = ["lazy", "temporal", "strings"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
polars = { version = "0.40", features = ["lazy", "temporal", "strings", "test"] }
